--- a/stats_asn_2_start.ipynb
+++ b/stats_asn_2_start.ipynb
@@ -218,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Checking out the data first and doing some cleaning."
+    "# Checking out the data first and doing some cleaning. Skip to Part 1 below."
    ]
   },
   {
